# whatwasthat

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLI_REFERENCE.md  INSTALLATION.md  MCP_REFERENCE.md  README.en.md  README.ko.md  README.md  architect.md  pyproject.toml
.claude/: agent-context.md
.omc/: project-memory.json
.omc/sessions/: 91bc8c7e-a93a-4ab3-be87-2ea7aa916f45.json
.omc/state/: agent-replay-91bc8c7e-a93a-4ab3-be87-2ea7aa916f45.jsonl  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
.omc/state/checkpoints/: checkpoint-2026-04-03T15-34-30-049Z.json
docker/remote/: .env.example  Dockerfile  docker-compose.yml
docs/plans/: 2026-04-03-phase1-poc-plan.md  2026-04-03-project-structure-design.md  2026-04-05-vector-migration-design.md  2026-04-05-vector-migration-impl.md
src/whatwasthat/: __init__.py  config.py  embedding.py  models.py  timeutil.py  usage_guide.py
src/whatwasthat/cli/: __init__.py  app.py
src/whatwasthat/pipeline/: __init__.py  chunker.py  entity.py  extractor.py  parser.py  prompts.py  resolver.py
src/whatwasthat/remote/: __init__.py  client.py  config.py  discovery.py  models.py
src/whatwasthat/search/: __init__.py  engine.py
src/whatwasthat/server/: __init__.py  http_api.py  mcp.py
src/whatwasthat/storage/: __init__.py  checkpoints.py  graph.py  raw_store.py  vector.py
tests/: conftest.py  test_models.py
tests/fixtures/: codex_rollout.jsonl  gemini_session.json  gemini_session.jsonl  sample_session.jsonl
tests/test_cli/: test_remote_ingest_command.py
tests/test_pipeline/: test_chunker.py  test_codex_parser.py  test_entity.py  test_extractor.py  test_gemini_parser.py  test_parser.py  test_parser_protocol.py  test_resolver.py
tests/test_search/: test_engine.py  test_env_filter.py
tests/test_server/: test_http_api.py  test_mcp.py  test_remote_mcp.py  test_setup.py
tests/test_storage/: test_embedding.py  test_graph.py  test_remote_checkpoints.py  test_vector.py
week_work/APR_1st/: work-plan.md
