[project]
name = "whatwasthat"
version = "1.0.1"
description = "AI 대화 기억 검색 — LLM 대화 로그를 벡터화하여 시맨틱 검색"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "typer>=0.15",
    "chromadb>=0.6",
    "sentence-transformers>=3.3",
    "pydantic>=2.10",
    "mcp>=1.0",
    "rank-bm25>=0.2.2",
    "kiwipiepy>=0.23.1",
    "einops>=0.8.2",
]

[project.scripts]
wwt = "whatwasthat.cli.app:app"
wwt-mcp = "whatwasthat.server.mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatwasthat"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
