[project]
name = "whatwasthat"
version = "1.0.10.3"
description = "Decision memory for AI coding agents — semantic search across Claude Code, Gemini CLI, and Codex CLI conversations"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

dependencies = [
    "typer>=0.15",
    "chromadb>=0.6",
    "onnxruntime>=1.17",
    "tokenizers>=0.19",
    "huggingface-hub>=0.23",
    "numpy>=1.24",
    "pydantic>=2.10",
    "mcp>=1.0",
    "rank-bm25>=0.2.2",
    "kiwipiepy>=0.23.1",
]

[project.scripts]
wwt = "whatwasthat.cli.app:app"
wwt-mcp = "whatwasthat.server.mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whatwasthat"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
